# ShoeStoreGSD

./: .gitignore  CLAUDE.md  config.py  main.py  pyproject.toml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-domain-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-auth-core-services/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/api/: __init__.py  auth_router.py  cart_router.py  catalog_router.py  chat_router.py  orders_router.py
app/lib/: __init__.py
app/web/: __init__.py
tests/e2e/: __init__.py
tests/evals/: __init__.py  test_smoke.py
tests/integration/: __init__.py  conftest.py  test_auth_router.py  test_chat_router.py  test_checkout.py  test_orders_router.py
tests/unit/: test_agent_tools.py  test_auth_service.py  test_auth_store.py  test_cart_service.py  test_catalog_service.py  test_config_jwt.py  test_guardrails.py  test_models.py  test_order_service.py  test_payment_mock.py  test_root_instruction.py  test_seed.py  test_stores.py  test_warehouse_mock.py
(+94 files in other folders)
