[project]
name = "shoestore"
version = "0.1.0"
description = "ShoeStore AI Demo — FastAPI + Claude agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "passlib>=1.7.4",
    "bcrypt>=5.0.0",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
